Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105092

QDockWidget cannot be re-docked if floating

XMLWordPrintable

    • WebAssembly
    • 19507dc678 (qt/qtbase/dev) 19507dc678 (qt/tqtc-qtbase/dev) 0edf92aa4e (qt/qtbase/6.4) 0edf92aa4e (qt/tqtc-qtbase/6.4)

      Using the examples/widgets/mainwindows/dockwidgets example, it is easy to check that the dock widgets cannot be re-docked.

      This is due to non-client events not being delivered to wasm windows.

        For Gerrit Dashboard: QTBUG-105092
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            mikolaj.boc Mikołaj Boc (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes