src/plugins/platforms/wasm/qwasmscreen.cpp
@@ -263,6 +263,15 @@ QWindow *QWasmScreen::topLevelAt(const QPoint &p) const
     return m_compositor->windowAt(p);
 }
 
+QPoint QWasmScreen::translateAndClipGlobalPoint(const QPoint &p) const
+{
+    return QPoint(
+            std::max(screen()->geometry().left(),
+                     std::min(screen()->geometry().right(), screen()->geometry().left() + p.x())),
+            std::max(screen()->geometry().top(),
+                     std::min(screen()->geometry().bottom(), screen()->geometry().top() + p.y())));
+}
+
 void QWasmScreen::invalidateSize()
 {
     m_geometry = QRect();
